@@ -1,20 +1,46 @@
 plugins {
     id 'java'
+    id 'com.gradleup.shadow' version '9.2.1'
 }
 
 group = 'dev.lumenlang'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.release.set(17)
+    options.compilerArgs.add('--enable-preview')
+}
 
 repositories {
     mavenCentral()
+    maven {
+        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
+    }
+    maven { url = "https://repo.lumenlang.dev" }
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:6.0.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation "org.spigotmc:spigot-api:1.20-R0.1-SNAPSHOT"
+    implementation "dev.lumenlang:lumen-plugin:1.0.9-BETA"
+    implementation "org.eclipse.jdt:ecj:3.45.0"
+    implementation "com.google.code.gson:gson:2.13.2"
 }
 
-test {
-    useJUnitPlatform()
+shadowJar {
+    archiveClassifier.set('')
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': 'dev.lumenlang.lumen.headless.HeadlessLumen'
+    }
+}
+
+build {
+    dependsOn shadowJar
 }
